--- a/app/css/app.css
+++ b/app/css/app.css
@@ -100,7 +100,7 @@ button {
   font-size: 2rem;
   line-height: 2.8rem;
   margin: 10px;
-  padding: 2px 30px
+  padding: 2px 10px
 }
 
 .player.one {
@@ -196,13 +196,32 @@ td.player2 span {
   margin: 30px 0 20px;
 }
 
+/* icons */
+.icon {
+  background-image: url(../img/spritex1.png);
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+  vertical-align: text-bottom;
+}
+
+.icon.person {
+  background-position: 50px -47px;
+}
+
+.icon.robot {
+  background-position: 0 -47px;
+}
+
+
 /* retina icons */
 @media only screen and (-webkit-min-device-pixel-ratio: 2), 
 only screen and (min-resolution: 2dppx) {
 
   td.player1,
-  td.player2 {
+  td.player2,
+  .icon {
     background-image: url(../img/spritex2.png);
-    background-size: 100px 50px;
+    background-size: 100px 100px;
   }
 }
